GAIM: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.11.0-pre7:
	* Can build RPMs as non-root
	* New yahoo library (can use HTTP proxy)
	* Command-line arg to specify config file
	* Can view all conversations in one tabbed window
	* Tooltips on links work again

version 0.11.0-pre6 (03/06/2001):
	* Fixed bug with NAS support
	* Napster plugin is included again
	  (Thanks for pointing out that it was missing,
	  (Yan V. Bulgak)
	* Oscar can: search by email, request confirmation, change password
	* TOC fixes
	* ICQ fixes
	* Faster HTML parsing/rendering

version 0.11.0-pre5 (02/26/2001):
	* Minor GUI changes
	* ICQ Alias problem fixed
	* Negative times fixed
	* Cannot create blank away messages/messages with blank titles
	* Can right-click Edit Buddies list to alias/add pounce/etc.
	* Ability to independently set accounts as away
	* Can use all away states for ICQ, Yahoo (N/A, Be Right Back, etc.)
	* Fixed hanging trees
	* Can close windows by hitting 'Esc' (optional)
	* Better HTML Widget
	* Can toggle timestamps by hitting F2 (optional)
	* Rewritten file transfer for TOC
	* Jabber got chat
	* Log Viewer (courtesy BMiller)
	* Can save conversation history
	* Napster can kinda sorta download files sometimes :)
	* You can activate IDs in Yahoo
	* ICQ upgraded to use icqlib 1.1.5

version 0.11.0-pre4:
	* ICQ upgraded to use icqlib 1.1.0
	* An enormous amount of bug fixes
	* Even More Protocol Plugins:
		Jabber (plugins/jabber)
		Napster (plugins/napster.c)
	* Fixed a segfault with 'Ignore new conversations while away'

version 0.11.0-pre3 (12/15/2000):
	* Away messages arranged alphabetically (Thanks Justin)
	* More GUI adjustments
	* Can optionally run command to play sound files
	* Icons for ICQ plugin (blatently stolen from GnomeICU)
	* Icons for Yahoo plugin (not-so-blatently stolen from GTKYahoo)
	* Optionally display warning level next to name in buddy list
	* Optionally ignore fonts on incoming messages